# draftly-ai-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  opencode.json  pyproject.toml  skills-lock.json
.agents/skills/auditing-cis-benchmark/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
.opencode/plans/: 2026-07-19-unify-llm-call-bedrock.md  fix-research-subagent.md  fix-rubric-implementation.md  implement-search-web.md
context/: ARCHITECTURE.md  BRANCHING.md  DESIGN.md  FEATURES.md  PRD.md  RULES.md  SCHEMA.md  WORKFLOW.md
docs/: GITHUB_APP_BOT_PLAN.md  SLACK_SETUP.md  SLACK_SUPPORT_REQUESTS_PLAN.md  cockroachdb_aws_hackathon.md  demo-guide.md  draftly_agent_overview.md  draftly_deep_agent_overview.md  github-ai-issues-bot.md  reviewer-integrations.md  sample-github-issues.md  sample-rag-issues.md  workflow.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
infrastructure/aws/: ecr-repository.tf  ecs-service.tf  main.tf  staging.tf
infrastructure/cockroachdb/: MIGRATIONS.md  schema.sql
infrastructure/discord/: SETUP.md
infrastructure/sendgrid/: SETUP.md
scripts/: init_db.py  seed_demo_data.py  sync_clerk_org.py
src/: __init__.py  config.py  database.py
src/agents/: __init__.py  graph.py  rubrics.py  state.py
src/api/: __init__.py  app.py  auth.py
src/api/routes/: docs.py  (+9 more)
src/cli/: __init__.py  draftly.py
src/integrations/: bedrock.py  discord.py  discord_blocks.py  discord_interactions.py  email.py  github.py  github_app.py  llm.py  markdown_to_slack.py  outbound.py  slack.py  slack_app.py  slack_blocks.py  slack_conversation.py  slack_feedback.py  slack_home.py  slack_mcp.py  slack_socket.py  slack_status.py  slack_store.py
src/knowledge/: url_fetcher.py
src/memory/: __init__.py  chunking.py  episodic.py  organizational.py  organizations.py  procedural.py  reviewer.py  reviewers.py  users.py  vector_store.py
src/security/: __init__.py  tokens.py
src/services/: clerk_admin.py
tests/: test_chunking.py  test_discord_webhook.py  test_email.py  test_github_app.py  test_github_integration.py  test_github_runner.py  test_github_webhook.py  test_human_node.py  test_human_notifications.py  test_hybrid_simple.py  test_investigation.py  test_notifications.py  test_outbound.py  test_reviewers.py  test_rubrics.py  test_slack_runner.py  test_slack_webhook.py  test_tokens.py  test_tokens_simple.py  test_url_fetcher.py  test_web_tools.py
tests/api/: test_discord_interactivity.py  test_slack_interactivity.py  test_slack_oauth.py
tests/integrations/: test_discord_blocks.py  test_discord_client.py  test_markdown_to_slack.py  test_slack_blocks.py  test_slack_blocks_param.py  test_slack_conversation.py  test_slack_feedback.py  test_slack_home.py  test_slack_mcp.py  test_slack_socket.py  test_slack_status.py  test_slack_store.py
(+94 files in other folders)
