[project]
name = "draftly"
version = "0.1.0"
description = "Autonomous documentation engineering with persistent agentic memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph + LangChain
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "langchain>=1.0.0",
    "langchain-aws>=0.2.0",
    "langchain-core>=1.0.0",
    # Database
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    # HTTP clients
    "httpx>=0.27.0",
    "slack-bolt>=1.20.0",
    "slack-sdk>=3.30.0",
    "discord.py>=2.4.0",
    # AWS
    "boto3>=1.35.0",
    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
