[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "draftly"
version = "0.1.0"
description = "Autonomous documentation engineering with persistent agentic memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangGraph + LangChain
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.3.5",
    # Database
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    # HTTP clients
    "httpx>=0.27.0",
    "trafilatura>=1.12",
    "PyMuPDF>=1.24",
    "slack-bolt>=1.20.0",
    "slack-sdk>=3.30.0",
    "discord.py>=2.4.0",
    # Auth
    "pyjwt>=2.8.0",
    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "langchain-cockroachdb>=0.3.0",
    "langchain-community>=0.3.0",
    "python-multipart>=0.0.32",
    "cryptography>=49.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["slack_bolt.*", "slack_sdk.*", "discord.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
